<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_ros_control</name>
  <version>0.0.1</version>
  <description>Dynamixel hardware interface for the ROS Control framework.</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamixel_workbench_toolbox</depend>
  <depend>ros_control_boilerplate</depend>

  <export>
  </export>
</package>
